# Isaac-Sim-Nav2-project

./: .gitignore  README.md  package.xml  setup.py  simple start
config/: nav2_params_isaac.yaml
config/rviz/: nav2_isaac_view.rviz
docs/: SETUP.md  TROUBLESHOOTING.md
isaac_sim_nav2/: bag_recorder.py  multi_goal_navigator.py
isaac_sim_nav2/utils/: goal_parser.py
launch/: isaac_nav2.launch.py  rviz.launch.py
maps/: warehouse.yaml
scripts/: record_test.sh  replay_test.sh  spawn_obstacles.py
tests/: test_goals.yaml
tests/waypoint_sequences/: cluttered_test.yaml  square_path.yaml
